Created kind cluster with step summary shared into it

--- a/deploy/overlays/dev/app/e2e.yaml
+++ b/deploy/overlays/dev/app/e2e.yaml
@@ -23,6 +23,5 @@ spec:
       volumes:
         - name: github-step-summary
           hostPath:
-            # This value will be substituted by envsubst with the value of GITHUB_STEP_SUMMARY.
-            path: "${GITHUB_STEP_SUMMARY}"
+            path: /step_summary
             type: File
