--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,10 +39,23 @@ jobs:
       - name: Create auth.json
         run: echo '${{ secrets.COMPOSER_AUTH }}' > $GITHUB_WORKSPACE/auth.json
 
+      - name: Create Kind config to mount step summary file
+        run: |
+          cat <<EOF > $HOME/kind-config.yaml
+          kind: Cluster
+          apiVersion: kind.x-k8s.io/v1alpha4
+          nodes:
+            - role: control-plane
+              extraMounts:
+                - hostPath: ${{ github.step_summary }}
+                  containerPath: /step_summary
+          EOF
+
       - name: Create a Kind cluster
         uses: helm/kind-action@v1.11.0
         with:
           node_image: kindest/node:v1.32.0
+          config: $HOME/kind-config.yaml
 
       - name: Install Kind-optimized ingress controller
         run: |
@@ -98,9 +111,5 @@ jobs:
       - name: Run E2E tests
         env:
           GITHUB_STEP_SUMMARY: ${{ github.step_summary }}
-        run: |
-          # subst GITHUB_STEP_SUMMARY in the e2e job with the actual file path
-          envsubst < deploy/overlays/dev/app/e2e.yaml | tee deploy/overlays/dev/app/e2e.yaml
-          
-          # run e2e tests
+        run: |         
           skaffold verify -a .build-artifacts
