--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Create Kind config to mount step summary file
         run: |
-          cat <<EOF > $HOME/kind-config.yaml
+          cat <<EOF > ${GITHUB_WORKSPACE}/kind-config.yaml
           kind: Cluster
           apiVersion: kind.x-k8s.io/v1alpha4
           nodes:
@@ -55,10 +55,11 @@ jobs:
         uses: helm/kind-action@v1.11.0
         with:
           node_image: kindest/node:v1.32.0
-          config: $HOME/kind-config.yaml
+          config: ${GITHUB_WORKSPACE}/kind-config.yaml
 
       - name: Install Kind-optimized ingress controller
         run: |
+          cat ${GITHUB_WORKSPACE}/kind-config.yaml
           kubectl apply -f https://kind.sigs.k8s.io/examples/ingress/deploy-ingress-nginx.yaml
 
       - name: Update Cluster DNS to resolve shopware.test and media.test domains
