Fix to enable writing to step summary file

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -117,6 +117,8 @@ verify:
             value: true
           - name: GITHUB_STEP_SUMMARY
             value: "/app/step_summary"
+          - name: GITHUB_ACTIONS
+            value: true
         command:
           - /bin/sh
         args:
