--- a/deploy/overlays/dev/app/e2e.yaml
+++ b/deploy/overlays/dev/app/e2e.yaml
@@ -25,3 +25,6 @@ spec:
           hostPath:
             path: /step_summary
             type: File
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1001
