--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -132,7 +132,8 @@ verify:
             echo "Running E2E tests..."
             npx playwright test
             ls -la /app
-            cat ${GITHUB_STEP_SUMMARY}"
+            echo "E2E tests passed." >> "${GITHUB_STEP_SUMMARY}"
+            cat "${GITHUB_STEP_SUMMARY}"
             echo "E2E tests finished."
     executionMode:
       kubernetesCluster:
