--- a/deploy/overlays/dev/app/e2e.yaml
+++ b/deploy/overlays/dev/app/e2e.yaml
@@ -7,6 +7,20 @@ spec:
   backoffLimit: 4
   template:
     spec:
+      initContainers:
+        - name: chown-step-summary
+          image: busybox
+          command:
+            - /bin/sh
+            - -c
+          args:
+            - chown 1000:1000 /app/step_summary
+          volumeMounts:
+            - name: github-step-summary
+              mountPath: /app/step_summary
+          securityContext:
+            runAsNonRoot: false
+            runAsUser: 0
       containers:
         - name: e2e
           image: kiweeteam/shopware-e2e
@@ -24,7 +38,7 @@ spec:
         - name: github-step-summary
           hostPath:
             path: /step_summary
-            type: File
+            type: FileOrCreate
       securityContext:
         runAsNonRoot: true
-        runAsUser: 1001
+        runAsUser: 1000
