--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,6 +41,9 @@ jobs:
       - name: Create auth.json
         run: echo '${{ secrets.COMPOSER_AUTH }}' > $GITHUB_WORKSPACE/auth.json
 
+      - name: Login to Container Registry
+        run: echo "${{ secrets.CONTAINER_REGISTRY_PASSWORD }}" | docker login -u ${{ secrets.CONTAINER_REGISTRY_USERNAME }} --password-stdin
+
       - name: Create a Kind cluster
         uses: helm/kind-action@v1.11.0
         with:
