--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,13 +31,6 @@ jobs:
           kustomize: '5.4.2'
           skaffold: '2.13.2'
 
-      - name: Cache Skaffold image build references
-        uses: actions/cache@v4
-        with:
-          path: ~/.skaffold
-          key: fixed-${{ runner.os }}
-          fail-on-cache-miss: false
-
       - name: Create auth.json
         run: echo '${{ secrets.COMPOSER_AUTH }}' > $GITHUB_WORKSPACE/auth.json
 
@@ -81,9 +74,24 @@ jobs:
           sed -i "/^.*kubernetes cluster.local/ i \ \ \ \ \ \ \ \ hosts {\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP shopware.test\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP media.test\n\ \ \ \ \ \ \ \ \ \ fallthrough\n\ \ \ \ \ \ \ \ }" coredns.yaml
           kubectl apply -n kube-system -f coredns.yaml
 
+      - name: Restore Skaffold Cache
+        uses: actions/cache/restore@v4
+        id: cache-skaffold-save
+        with:
+          path: ~/.skaffold
+          key: fixed-${{ runner.os }}
+          fail-on-cache-miss: false
+
       - name: Build Shopware
         run: |
           skaffold build --file-output=.build-artifacts --push=true
+
+      - name: Save Skaffold Cache
+        uses: actions/cache/save@v4
+        id: cache-skaffold-save
+        with:
+          path: ~/.skaffold
+          key: fixed-${{ runner.os }}
 
       - name: Deploy Shopware to local Kind cluster
         run: |
