Fixed dev server

--- a/deploy/overlays/dev/app/app-server-dev.yaml
+++ b/deploy/overlays/dev/app/app-server-dev.yaml
@@ -45,6 +45,8 @@ spec:
             - -a
             - -v
             - --no-compress
+            - -r
+            - /app/public
           image: kiweeteam/franken-shopware-dev
           envFrom:
             - configMapRef:
