--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -74,24 +74,16 @@ jobs:
           sed -i "/^.*kubernetes cluster.local/ i \ \ \ \ \ \ \ \ hosts {\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP shopware.test\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP media.test\n\ \ \ \ \ \ \ \ \ \ fallthrough\n\ \ \ \ \ \ \ \ }" coredns.yaml
           kubectl apply -n kube-system -f coredns.yaml
 
-      - name: Restore Skaffold Cache
-        uses: actions/cache/restore@v3
-        id: cache-skaffold-restore
+      - name: Skaffold Cache
+        uses: actions/cache@v4
+        id: cache-skaffold
         with:
           path: ~/.skaffold
           key: fixed-${{ runner.os }}
-          fail-on-cache-miss: false
 
       - name: Build Shopware
         run: |
           skaffold build --file-output=.build-artifacts --push=true
-
-      - name: Save Skaffold Cache
-        uses: actions/cache/save@v3
-        id: cache-skaffold-save
-        with:
-          path: ~/.skaffold
-          key: ${{ steps.cache-skaffold-restore.outputs.cache-primary-key }}
 
       - name: Deploy Shopware to local Kind cluster
         run: |
