--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,6 +4,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Maximize build space
+        run: |
+          # Remove unnecessary tools that are not needed for build & test
+          sudo rm -rf /usr/local/.ghcup
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /usr/local/lib/android/sdk/ndk
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /usr/local/share/boost
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -21,14 +31,11 @@ jobs:
           kustomize: '5.4.2'
           skaffold: '2.13.2'
 
-      - name: Cache skaffold artifacts and config
-        uses: actions/cache@v4
-        with:
-          path: ~/.skaffold/
-          key: fixed-${{ github.sha }}
-
       - name: Create auth.json
         run: echo '${{ secrets.COMPOSER_AUTH }}' > $GITHUB_WORKSPACE/auth.json
+
+      - name: Login to Container Registry
+        run: echo "${{ secrets.CONTAINER_REGISTRY_TOKEN }}" | docker login -u ${{ secrets.CONTAINER_REGISTRY_USERNAME }} --password-stdin
 
       - name: Create a Kind cluster
         uses: helm/kind-action@v1.11.0
@@ -47,7 +54,7 @@ jobs:
             INGRESS_IP=$(kubectl get svc ingress-nginx-controller \
               -n ingress-nginx \
               -o jsonpath='{.spec.clusterIP}')
-            
+
             # Check if $INGRESS_IP matches a simplistic IPv4 pattern: x.x.x.x
             if [[ $INGRESS_IP =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
               # Found the valid IP address.
@@ -61,7 +68,7 @@ jobs:
               echo "Error: Ingress IP not valid after 20 attempts."
               exit 1
           fi
-          
+
           # Update CoreDNS configmap to resolve shopware.test and media.test domains.
           kubectl get configmap coredns -n kube-system -o yaml > coredns.yaml
           sed -i "/^.*kubernetes cluster.local/ i \ \ \ \ \ \ \ \ hosts {\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP shopware.test\n\ \ \ \ \ \ \ \ \ \ $INGRESS_IP media.test\n\ \ \ \ \ \ \ \ \ \ fallthrough\n\ \ \ \ \ \ \ \ }" coredns.yaml
@@ -69,18 +76,33 @@ jobs:
 
       - name: Build Shopware
         run: |
-          skaffold build --file-output=.build-artifacts
+          skaffold build --file-output=.build-artifacts --push=true
 
       - name: Deploy Shopware to local Kind cluster
         run: |
           skaffold run --status-check=true --tolerate-failures-until-deadline=true
 
-      - name: Run smoke test
+      - name: Wait for Shopware to be ready
         run: |
-          skaffold verify -a .build-artifacts
+          kubectl wait --for=condition=complete job/shopware-init -n shopware --timeout=300s
 
       - name: Run integration tests
         run: |
-          # Run shopware-demo plugin tests 
+          # Run shopware-demo plugin tests
           kubectl exec svc/app-server-dev -n shopware -- \
             /shopware-bin php-cli vendor/bin/phpunit -c vendor/kiwee/shopware-demo-plugin/phpunit.xml
+
+      - name: Run E2E tests
+        run: |
+          # disable exit on error to allow the step summary to be created
+          set +e
+          
+          skaffold verify -a .build-artifacts
+          exit_code=$?
+          set -e
+          
+          # get the step summary and save it to the step summary file
+          kubectl create -n shopware -f deploy/overlays/test/app/step-summary.yaml
+          kubectl wait --for=condition=complete job/output-step-summary --timeout=30s -n shopware
+          kubectl logs job/output-step-summary -n shopware >> $GITHUB_STEP_SUMMARY
+          exit $exit_code
